samples/voting/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-basic
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: vote
          servicePort: 5007
        path: /vote(/|$)(.*)
      - backend:
          serviceName: results
          servicePort: 5005
        path: /results(/|$)(.*)
